# solidrop

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
.claude/hooks/: session-start.sh
crates/api-server/: Cargo.toml  Dockerfile  SPEC.md
crates/api-server/src/: config.rs  error.rs  lib.rs  main.rs  middleware.rs  s3_client.rs
crates/api-server/src/routes/: cache.rs  delete.rs  file_move.rs  files.rs  health.rs  mod.rs  presign.rs
crates/api-server/tests/: api_test.rs
crates/cli/: Cargo.toml  SPEC.md
crates/cli/src/: api_client.rs  config.rs  main.rs  master_key.rs
crates/cli/src/commands/: delete.rs  download.rs  list.rs  mod.rs  move_cmd.rs  sync.rs  upload.rs
crates/cli/tests/: api_contract_test.rs  cli_integration_test.rs
crates/crypto/: Cargo.toml  SPEC.md
crates/crypto/src/: decrypt.rs  encrypt.rs  error.rs  hash.rs  key_derivation.rs  lib.rs
docs/: README.md
docs/design/: architecture.md  data-flow.md
docs/progress/: 00-init-stub-report.md  01-local-devenv-report.md  02-tbd-decisions-report.md  03-api-endpoints-report.md  03c-review-fixes-report.md  04-cli-implementation.md  04-code-review-report.md  04b-cli-code-review-report-b913d64.md  04c-cli-review-fixes-report.md  05-cli-code-review-report-b913d64.md
infra/terraform/: SPEC.md  iam.tf  s3.tf  variables.tf
