[package]
name = "solidrop-api-server"
version = "0.1.0"
edition = "2021"
description = "Solidrop API server — presigned URL generation, file listing, cache management"

[dependencies]
solidrop-crypto = { path = "../crypto" }
axum = "0.7"
aws-sdk-s3 = "1"
aws-config = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"

[dev-dependencies]
axum-test = "16"
reqwest = "0.13.2"
tower = "0.5.3"
