[package]
name = "artsync-cli"
version = "0.1.0"
edition = "2021"
description = "ArtSync PC CLI tool — upload, download, list, sync files"

[[bin]]
name = "art-sync"
path = "src/main.rs"

[dependencies]
anyhow = "1"
artsync-crypto = { path = "../crypto" }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
directories = "5"
