[package]
name = "artsync-crypto"
version = "0.1.0"
edition = "2021"
description = "Shared encryption library for ArtSync (AES-256-GCM, Argon2id key derivation, SHA-256 hashing)"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
thiserror = "1"

[dev-dependencies]
assert_matches = "1"
